quick fix to stop horizontal scrollbar

--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -16,7 +16,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    max-height: 100%;
+    max-height: 40vh;
     height: 20vw;
 }
 
